syntax = "proto3";
package em.liquidityprovider.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/e-money/em-ledger/x/liquidityprovider/types";

message GenesisAcc {
  string account = 1 [
    (gogoproto.jsontag) = "address",
    (gogoproto.moretags) = "yaml:\"address\""
  ];
  repeated cosmos.base.v1beta1.Coin mintable = 2 [
    (gogoproto.moretags) = "yaml:\"mintable\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false
  ];
}

message GenesisState {
  GenesisAcc accounts = 1 [ (gogoproto.moretags) = "yaml:\"accounts\"" ];
}
