syntax = "proto3";
package em.market.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "em/market/v1beta1/market.proto";

option go_package = "github.com/e-money/em-ledger/x/market/types";

message MsgAddLimitOrder {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

  string client_order_id = 2
      [ (gogoproto.moretags) = "yaml:\"client_order_id\"" ];

  TimeInForce time_in_force = 3
      [ (gogoproto.moretags) = "yaml:\"time_in_force\"" ];

  cosmos.base.v1beta1.Coin source = 4
      [ (gogoproto.moretags) = "yaml:\"source\"" ];
  cosmos.base.v1beta1.Coin destination = 5
      [ (gogoproto.moretags) = "yaml:\"destination\"" ];
}

message MsgAddMarketOrder {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

  string client_order_id = 2
      [ (gogoproto.moretags) = "yaml:\"client_order_id\"" ];

  TimeInForce time_in_force = 3
      [ (gogoproto.moretags) = "yaml:\"time_in_force\"" ];

  string source = 4 [ (gogoproto.moretags) = "yaml:\"source\"" ];

  cosmos.base.v1beta1.Coin destination = 5
      [ (gogoproto.moretags) = "yaml:\"destination\"" ];

  string maximum_slippage = 6 [
    (gogoproto.moretags) = "yaml:\"maximum_slippage\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message MsgCancelOrder {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  string client_order_id = 2
      [ (gogoproto.moretags) = "yaml:\"client_order_id\"" ];
}

message MsgCancelReplaceLimitOrder {
  string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

  string original_client_order_id = 2 [
    (gogoproto.customname) = "OrigClientOrderId",
    (gogoproto.moretags) = "yaml:\"original_client_order_id\""
  ];

  string new_client_order_id = 3 [
    (gogoproto.customname) = "NewClientOrderId",
    (gogoproto.moretags) = "yaml:\"new_client_order_id\""
  ];

  cosmos.base.v1beta1.Coin source = 4
      [ (gogoproto.moretags) = "yaml:\"source\"" ];
  cosmos.base.v1beta1.Coin destination = 5
      [ (gogoproto.moretags) = "yaml:\"destination\"" ];
}
